# Adaptive-pattern-matching-on-encrypted-network-communication

./: AdaptiveTestPair.pair  CMakeCache.txt  CMakeLists.txt  K-meansRuleGen.py  K-meansThreatDetectionStandalone.py  MLgeneratedRules.pair  Makefile  MidBox.h  ModifiedSHVE.cpp  README.md  SHVE.cpp  SHVE.h  SHVETest  cmake_install.cmake  test.cpp
